# snail-scheme

./: .gitignore  .gitmodules  Benchmark.ps1  BenchmarkChez.ps1  BenchmarkPy.ps1  CMakeLists.txt  ProfilePyDemo3.ps1  ProfileSchemeDemo3.ps1  README.md  SSC.ps1  d-latest.scm  d-older.scm  log.txt  log1.txt  split.txt  stack-trace.txt  unity.txt
cmake/: FetchGoogleTest.cmake
doc/: 002.design.modules.md  003.design.macros.md  004.PLAN-1.md  easy-macros.ps  gc-design.md
inc/config/: config.hh
inc/snail-scheme/: allocator.hh  core.hh  feedback.hh  gc.d.hh  gc.hh  gc.size_class.inl  intern.hh  memory.hh  mir.hh  module.hh  object.0.hh  object.1.hh  parser.hh  reactor.hh  smt.hh  std.hh  vm.hh
inc/ss-config/: config.hh  config.hh.in
inc/ss-core/: .gitignore  README.md  allocator.hh  analyst.hh  cli.hh  common.hh  compiler.hh  config.hh.in  defn.hh  expander.hh  feedback.hh  file-loc.hh  gc.d.hh  gc.hh  gc.size_class.inl  gdef.hh  intern.hh  library.hh  memory.hh  object.0.hh  object.1.hh  parser.hh  pinvoke.hh  pproc.hh  printing.hh  rewrite.hh  smt.hh  std.hh  syntax.hh  vcode.hh  vm.hh  vthread.hh
inc/ss-jit/: analyst.hh  compiler.hh  expander.hh  libs.hh  mir.hh  parser.hh  printing.hh  syntax-rules.hh  vcode.hh  vglobals.hh  vm.hh  vrom.hh  vthread.hh
inc/ss-pkgman/: library.hh
plan/: PLAN.md
sandbox/: demo1.scm  demo10.scm  demo11.scm  demo12.scm  demo13.scm  demo14.scm  demo15.scm  demo2.scm  demo3-chez.scm  demo3.py  demo3.scm  demo4.scm  demo5.scm  demo6.scm  demo7.scm  demo8.scm  demo9.scm
src/: .gitignore
src/config/: config.hh.in
src/snail-scheme/: feedback.cc  gc.cc  intern.cc  memory.cc  mir.cc  object.cc  parser.cc  printing.cc  reactor.cc  smt.cc  std.cc  vm.cc
src/ss-core/: analyst.cc  cli.cc  compiler.cc  defn.cc  expander.cc  feedback.cc  file-loc.cc  gc.cc  gdef.cc  intern.cc  library.cc  memory.cc  object.cc  parser.cc  pinvoke.cc  printing.cc  rewrite.cc  smt.cc  std.cc  syntax.cc  vcode.cc  vm.cc  vthread.cc
src/ss-jit/: analyst.cc  compiler.cc  expander.cc  libs.cc  mir.cc  parser.cc  printing.cc  smt.cc  std.cc  syntax-rules.cc  vcode.cc  vglobals.cc  vm.cc  vrom.cc  vthread.cc
src/ss-pkgman/: library.cc
src/ss-rtlib/: README.md  ss-rtlib.cc  ss-rtlib.d.h
src/ss-stdlib/: .gitignore  Makefile  Makefile.in  README.md  ss-stdlib.cc
src/ssc/: main.scm  reader.scm  token.scm
src/ssi/: core.hh  feedback.cc  feedback.hh  heap.cc  heap.hh  intern.cc  intern.hh  object-v2.cc  object-v2.hh  object.0.hh  object.1.hh  object.cc  object.hh  parser.cc  parser.hh  printing.cc  printing.hh  procedure.cc  procedure.hh  ssi.cc  vm-exp.hh  vm-stack.hh  vm.cc  vm.hh
tests/: TestObject1.cc  TestTest.cc
